# wanhope

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  LICENSE  README.md  build.rs
client/assets/shaders/: egui.frag  egui.vert  egui.vert.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
client/shaders/: egui.frag.spv  point_light.frag  point_light.frag.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
client/src/: app.rs  camera.rs  frame_info.rs  game_object.rs  input.rs  keyboard_movement_controller.rs  main.rs  network.rs  simple_render_system.rs  window.rs
client/src/egui/: mod.rs
client/src/egui/ui/: chat.rs
client/src/graphics/: camera.rs  frame_info.rs  mod.rs  plane.rs  ray.rs  texture_atlas.rs  tile_atlas.rs
client/src/graphics/systems/: point_light_system.rs  simple_render_system.rs
client/src/graphics/vulkan/: buffer.rs  device.rs  egui_integration.rs  image.rs  image_view.rs  instance.rs  mod.rs  model.rs  pipeline.rs  renderer.rs  shader.rs  swapchain.rs
client/src/graphics/vulkan/descriptor_set/: layout.rs  pool.rs  writer.rs
client/src/graphics/vulkan/egui/: integration.rs  mod.rs
client/src/systems/: mod.rs  point_light_system.rs  simple_render_system.rs
client/src/vulkan/: buffer.rs  device.rs  image_view.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs  swapchain.rs
client/src/vulkan/descriptor_set/: layout.rs  pool.rs  writer.rs
client/src/vulkan/egui/: integration.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
common/src/world/: chunk.rs  mod.rs  tile.rs  world.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs
shaders/: simple_shader.frag  simple_shader.vert
src/: app.rs  camera.rs  frame_info.rs  game_object.rs  input.rs  main.rs  simple_render_system.rs  window.rs
src/vulkan/: buffer.rs  device.rs  image_view.rs  mod.rs  model.rs  pipeline.rs  shader.rs  simple_render_system.rs  swapchain.rs
src/vulkan/descriptor_set/: layout.rs  mod.rs  pool.rs
