[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }

ndarray = { version = "0.15.4", features = ["serde"] }

num_enum = "0.5.7"
