[package]
name = "server"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

glam = { version = "0.20.5", features = ["serde"] }

tokio = { version = "1.18.2", features = ["full"] }

log = "0.4.17"
simple_logger = "2.1.0"
